<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.epam.jdi</groupId>
    <artifactId>jdi-light-browserstack</artifactId>
    <version>1.0.0</version>
    <name>Browserstack template</name>

    <properties>
        <driver>chrome</driver>
        <remote.type>browserstack</remote.type>
        <domain>https://jdi-testing.github.io/jdi-light/</domain>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <USERNAME>kirillpoltorykhi_D3ILCJ</USERNAME>
        <ACCESS_KEY>KJpfnFzGy7rM64zpmueU</ACCESS_KEY>
        <aspectj.args></aspectj.args>
        <aspectj.version>1.9.20</aspectj.version>
        <allure.testng>2.23.0</allure.testng>
        <allure.maven>2.12.0</allure.maven>
        <jetty.version>9.4.12.RC2</jetty.version>
    </properties>

    <profiles>
        <profile>
            <id>ci</id>
            <activation>
                <activeByDefault>false</activeByDefault>
            </activation>
            <properties>
                <remote.type>selenoid</remote.type>
            </properties>
        </profile>
        <profile>
            <id>jdk16</id>
            <activation>
                <jdk>[16, 20]</jdk>
            </activation>
            <properties>
                <aspectj.args>--add-opens java.base/java.lang=ALL-UNNAMED</aspectj.args>
            </properties>
        </profile>
    </profiles>

    <dependencies>
        <!--JDI-->
        <dependency>
            <groupId>com.epam.jdi</groupId>
            <artifactId>jdi-light-html</artifactId>
            <version>LATEST</version>
        </dependency>

        <!--Allure-->
        <dependency>
            <groupId>io.qameta.allure</groupId>
            <artifactId>allure-testng</artifactId>
            <version>${allure.testng}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-slf4j-impl</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-1.2-api</artifactId>
            <version>${log4j2.version}</version>
        </dependency>

    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                </configuration>
            </plugin>
            <!--Allure reporting config in parent-->
            <plugin>
                <groupId>org.eclipse.jetty</groupId>
                <artifactId>jetty-maven-plugin</artifactId>
                <version>${jetty.version}</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M7</version>
                <configuration>
                    <systemPropertyVariables>
                        <allure.results.directory>${project.build.directory}/allure-results</allure.results.directory>
                    </systemPropertyVariables>
                    <suiteXmlFiles>
                        <suiteXmlFile>src/test/resources/general.xml</suiteXmlFile>
                    </suiteXmlFiles>
                    <argLine>
                        ${aspectj.args}
                        -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                    </argLine>
                    <environmentVariables>
                        <USERNAME>${USERNAME}</USERNAME>
                        <ACCESS_KEY>${ACCESS_KEY}</ACCESS_KEY>
                    </environmentVariables>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            <plugin>
                <groupId>io.qameta.allure</groupId>
                <artifactId>allure-maven</artifactId>
                <version>${allure.maven}</version>
            </plugin>
        </plugins>

        <resources>
            <resource>
                <directory>${project.basedir}/src/main/resources</directory>
            </resource>
            <resource>
                <directory>src/test/resources</directory>
                <filtering>true</filtering>
            </resource>
        </resources>
    </build>

</project>
